--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ cache:
   - $HOME/.sbt/boot/scala*
   - $HOME/.sbt/launchers
 
+matrix:
+  include:
+    - env: SCALA_VERSION=2.11.2
+      os: linux
+      jdk: oraclejdk8
+
 script:
   - sbt scalafmt::test
   - sbt test
