--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,21 @@
 language: scala
-scala: 2.12.2
+scala: 2.11.11
+sudo: false
+
+before_cache:
+  # Cleanup the cached directories to avoid unnecessary cache updates
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
+  - find $HOME/.sbt        -name "*.lock"               -print -delete
 
 cache:
   directories:
-  - $HOME/.sbt/0.13/dependency
-  - $HOME/.sbt/boot/scala*
-  - $HOME/.sbt/launchers
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt
+
 
 matrix:
   include:
-    - env: SCALA_VERSION=2.12.2
+    - env: SCALA_VERSION=2.11.11
       os: linux
       jdk: oraclejdk8
 
