--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: scala
 scala: 2.11.11
 sudo: false
 
+services:
+  - mongodb
+
 before_cache:
   # Cleanup the cached directories to avoid unnecessary cache updates
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
@@ -18,6 +21,9 @@ matrix:
     - env: SCALA_VERSION=2.11.11
       os: linux
       jdk: oraclejdk8
+
+before_script:
+  - sleep 10
 
 script:
   - sbt scalafmtTest
