Fix some style warnings
Merge branch 'master' of https://github.com/nvankaam/FlinkPlayground into Kafka

Conflicts:
	.idea/libraries/SBT__org_slf4j_slf4j_api_1_7_25_jar.xml
	.idea/modules/mainRunner-build.iml
	.idea/modules/mainRunner.iml
	.idea/modules/root-build.iml
	.idea/modules/root.iml
	build.sbt

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -5,4 +5,15 @@ codefeedr {
     db = "codefeedr_test"
   }
 
+  kafka {
+    bootstrap.servers = "localhost:9092"
+    acks = "all"
+    retries = 0
+    batch.size = 16382
+    linger.ms = 1
+    buffer.memory = 33554432
+    # Both serializers should not be needed in the future
+    key.serializer = "org.apache.kafka.common.serialization.StringSerializer"
+    value.serialize = "org.apache.kafka.common.serialization.StringSerializer"
+  }
 }
