Cleaned up some code Got a working type registry over kafka

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -6,14 +6,25 @@ codefeedr {
   }
 
   kafka {
-    bootstrap.servers = "localhost:9092"
-    acks = "all"
-    retries = 0
-    batch.size = 16382
-    linger.ms = 1
-    buffer.memory = 33554432
-    # Both serializers should not be needed in the future
-    key.serializer = "org.apache.kafka.common.serialization.StringSerializer"
-    value.serialize = "org.apache.kafka.common.serialization.StringSerializer"
+    server {
+      bootstrap.servers = "localhost:9092"
+      acks = "all"
+      retries = 0
+      batch.size = 16382
+      linger.ms = 1
+      buffer.memory = 33554432
+    }
+    consumer {
+      bootstrap.servers = "localhost:9092"
+      acks = "all"
+      retries = 0
+      batch.size = 16382
+      linger.ms = 1
+      buffer.memory = 33554432
+
+      zookeeper.connect = "localhost:2181"
+      zookeeper.connection.timeout.ms = 6000
+      group.id = "test-consumer-group"
+    }
   }
 }
