Removed side effects Added an explicit Initialize and Shutdown to the kafkalibrary Made the impact of the remaining side-effects non-destructive for the testing environment Kafka tests should now clear all running kafka threads when passing

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -25,6 +25,7 @@ codefeedr {
       zookeeper.connect = "localhost:2181"
       zookeeper.connection.timeout.ms = 6000
       group.id = "test-consumer-group"
+      auto.offset.reset = "earliest"
     }
   }
 }
