Current progress, messing with kafka and async unit tests

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -12,8 +12,8 @@ codefeedr {
     }
     consumer {
       bootstrap.servers = "localhost:9092"
-      group.id = "test-consumer-group"
       auto.offset.reset = "earliest"
+      auto.commit.interval.ms = 1000
     }
   }
 }
