--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -7,11 +7,11 @@ codefeedr {
 
   kafka {
     server {
-      bootstrap.servers = "localhost:9092"
+      bootstrap.servers = "192.168.99.100:9092"
       retries = 0
     }
     consumer {
-      bootstrap.servers = "localhost:9092"
+      bootstrap.servers = "192.168.99.100:9092"
       auto.offset.reset = "earliest"
       auto.commit.interval.ms = 100
     }
