--- a/containers/kafka/supervisor/zookeeper.conf
+++ b/containers/kafka/supervisor/zookeeper.conf
@@ -2,4 +2,4 @@
 command=/usr/share/zookeeper/bin/zkServer.sh start-foreground
 autostart=true
 autorestart=true
-redirect_stderr=true
+#redirect_stderr=true
