--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -7,10 +7,12 @@ codefeedr {
 
   kafka {
     server {
+      #bootstrap.servers = "127.0.0.1:9092"
       bootstrap.servers = "192.168.99.100:9092"
       retries = 0
     }
     consumer {
+      #bootstrap.servers = "127.0.0.1:9092"
       bootstrap.servers = "192.168.99.100:9092"
       auto.offset.reset = "earliest"
       auto.commit.interval.ms = 100
