--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ cache:
 
 before_install:
   - docker build -t codefeedr/kafka containers/kafka/
-  - docker run -p 2181:2181 -p 9092:9092 --name kafka --rm --env ADVERTISED_HOST=localhost --env ADVERTISED_PORT=9092 -d codefeedr/kafka
+  - docker network create --subnet=192.168.99.100/16 kafkanet
+  - docker run --net kafkanet -p 2181:2181 -p 9092:9092 --name kafka --rm --env ADVERTISED_HOST=192.168.99.100 --env ADVERTISED_PORT=9092 --env DELETE_TOPICS=true -d codefeedr/kafka
   - docker ps -a
 matrix:
   include:
