--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -16,7 +16,12 @@ codefeedr {
       auto.commit.interval.ms = 100
     }
   }
+  zookeeper {
+    connectionstring = "192.168.99.100:2181"
+    connectTimeout = 5
+    sessionTimeout = 30
 
+  }
   flink {
     remote {
       host = "192.168.99.100"
