--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,5 @@ before_script:
 
 script:
   - sbt package
-  - sbt test
+  - sbt 'set parallelExecution in ThisBuild := false' test
   - sbt scalafmt::test
