Small refactoring, configurable partititions

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -13,6 +13,13 @@ codefeedr {
       bootstrap.servers = "localhost:9092"
       auto.offset.reset = "earliest"
     }
+    # Kafka configuration specific for codefeedrs kafka connectors
+    custom {
+      # Number of partitions used when creating kafka topics
+      # Each source in Flink can expose data from one or more partitions,
+      # so keep flink's parallism divisable by this number
+      partition.count = 4
+    }
   }
 
 
