--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -15,6 +15,13 @@ codefeedr {
       auto.offset.reset = "earliest"
       auto.commit.interval.ms = 100
     }
+    # Kafka configuration specific for codefeedrs kafka connectors
+    custom {
+      # Number of partitions used when creating kafka topics
+      # Each source in Flink can expose data from one or more partitions,
+      # so keep flink's parallism divisable by this number
+      partition.count = 4
+    }
   }
   zookeeper {
     connectionstring = "172.20.1.3:2181"
