Started on a simple (github) plugin which retrieves PushEvents. Also wrote a small test for the GithubSource/Plugin, need to be extended.

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -31,4 +31,14 @@ codefeedr {
     }
   }
 
+  input {
+    github {
+      # Api key for querying GitHub events
+      apikey = ""
+
+      # Name of the collection to use for events
+      events_collection = "github_events"
+    }
+  }
+
 }
