Started on an abstract MongoSink.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,7 +1,10 @@
 codefeedr {
 
   mongo {
-    url = "mongodb://localhost:27017"
+    host = "localhost"
+    port = 27017
+    username = ""
+    password = ""
     db = "codefeedr"
   }
   kafka {
