Added (integration) test involving mongosource.

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -1,8 +1,11 @@
 codefeedr {
 
   mongo {
-    url = "mongodb://localhost:27017"
-    db = "codefeedr_test"
+    host = "localhost"
+    port = 27017
+    username = ""
+    password = ""
+    db = "codefeedr"
   }
 
   kafka {
