Created seperate object for all the case classes and played around with commits/events.

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -41,6 +41,9 @@ codefeedr {
 
       # Name of the collection to use for events
       events_collection = "github_events"
+
+      # Name of the collection to use for commits
+      commits_collection = "github_commits"
     }
   }
 
