Removed some unused classes, create generic (async) GetOrAdd operator and also implemented it for a PushEvent. Need to find a way to define multiple indexes.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -21,8 +21,10 @@ codefeedr {
 
   input {
     github {
-      # Api key for querying GitHub events
-      apikey = ""
+      # Api keys for querying GitHub events
+      apikey {
+        0 = ""
+      }
 
       # Name of the collection to use for events
       events_collection = "github_events"
