--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -37,7 +37,9 @@ codefeedr {
   input {
     github {
       # Api key for querying GitHub events
-      apikey = ""
+      apikey {
+        0 = ""
+      }
 
       # Name of the collection to use for events
       events_collection = "github_events"
