Fixed issues in Kafka consumers and producers

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -4,24 +4,24 @@ codefeedr {
     url = "mongodb://localhost:27017"
     db = "codefeedr"
   }
+
   kafka {
     server {
-      bootstrap.servers = "localhost:9092"
+      bootstrap.servers = "172.20.1.2:9092"
       retries = 0
     }
     consumer {
-      bootstrap.servers = "localhost:9092"
+      bootstrap.servers = "172.20.1.2:9092"
       auto.offset.reset = "earliest"
-    }
-    # Kafka configuration specific for codefeedrs kafka connectors
-    custom {
-      # Number of partitions used when creating kafka topics
-      # Each source in Flink can expose data from one or more partitions,
-      # so keep flink's parallism divisable by this number
-      partition.count = 4
+      auto.commit.interval.ms = 100
     }
   }
+  zookeeper {
+    connectionstring = "172.20.1.3:2181"
+    connectTimeout = 5
+    sessionTimeout = 30
 
+  }
 
   input {
     github {
