WIP transactions on the kafka sink

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -25,6 +25,10 @@ codefeedr {
       # Each source in Flink can expose data from one or more partitions,
       # so keep flink's parallism divisable by this number
       partition.count = 4
+      # The amount of producers each instance of each kafka sink should maintain
+      # For each uncommitted checkpoint each instance of each kafka sink maintains a producer
+      # 5 is the same used in flinks native kafka source implementation
+      producer.count = 5
     }
   }
   zookeeper {
