--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,31 +5,47 @@ codefeedr {
     port = 27017
     username = ""
     password = ""
-    db = "codefeedr"
+    db = "codefeedr_test"
   }
 
   kafka {
     server {
-      bootstrap.servers = "172.20.1.2:9092"
+      bootstrap.servers = "127.0.0.01:9092"
       retries = 0
     }
     consumer {
-      bootstrap.servers = "172.20.1.2:9092"
+      bootstrap.servers = "127.0.0.1:9092"
       auto.offset.reset = "earliest"
       auto.commit.interval.ms = 100
+      enable.auto.commit = false
+    }
+    # Kafka configuration specific for codefeedrs kafka connectors
+    custom {
+      # Number of partitions used when creating kafka topics
+      # Each source in Flink can expose data from one or more partitions,
+      # so keep flink's parallism divisable by this number
+      partition.count = 4
     }
   }
   zookeeper {
-    connectionstring = "172.20.1.3:2181"
+    connectionstring = "127.0.0.1:2181"
     connectTimeout = 5
     sessionTimeout = 30
 
   }
+  flink {
+    remote {
+      host = "127.0.0.1"
+      port = 6123
+      parallelism = 1
+      jars = "target/scala-2.11/codefeedr_2.11-0.1-SNAPSHOT-tests.jar,target/scala-2.11/codefeedr_2.11-0.1-SNAPSHOT.jar,C:\\Users\\Niels\\.ivy2\\cache\\com.typesafe.scala-logging\\scala-logging_2.11\\bundles\\scala-logging_2.11-3.5.0.jar,C:\\Users\\Niels\\.ivy2\\cache\\org.apache.kafka\\kafka-clients\\jars\\kafka-clients-0.11.0.0.jar"
+    }
+  }
 
   input {
     github {
-      # Api keys for querying GitHub events
-      apikeys = [""]
+      # Api key for querying GitHub events
+      apikeys = ["", "", ""]
 
       # Name of the collection to use for events
       events_collection = "github_events"
@@ -38,4 +54,5 @@ codefeedr {
       commits_collection = "github_commits"
     }
   }
+
 }
