some minor updates.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,7 +5,7 @@ codefeedr {
     port = 27017
     username = ""
     password = ""
-    db = "codefeedr_test"
+    db = "codefeedr"
   }
 
   kafka {
