--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -45,7 +45,7 @@ codefeedr {
   input {
     github {
       # Api key for querying GitHub events
-      apikeys = ["6c0fff0d71ad48201666e270f332ce78b4139f79", "6c0fff0d71ad48201666e270f332ce78b4139f79", "6c0fff0d71ad48201666e270f332ce78b4139f79"]
+      apikeys = ["0", "1", "2"]
 
       # Name of the collection to use for events
       events_collection = "github_events"
