--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -18,6 +18,10 @@ codefeedr {
       auto.offset.reset = "earliest"
       auto.commit.interval.ms = 100
     }
+    producer {
+      bootstrap.servers = "172.20.1.2:9092"
+      retries = 1
+    }
   }
   zookeeper {
     connectionstring = "172.20.1.3:2181"
