Made minor changes in plugins, also gave Kafka bigger max message size.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -46,7 +46,7 @@ codefeedr {
     github {
       # Api key for querying GitHub events
       apikeys = ["", "", ""]
-
+      input_api_key = ""
       # Name of the collection to use for events
       events_collection = "github_events"
 
