--- a/containers/kafka/docker-compose.yml
+++ b/containers/kafka/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       KAFKA_ADVERTISED_HOST_NAME: 172.20.1.2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_MESSAGE_MAX_BYTES: 10000000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
