--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -49,7 +49,7 @@ codefeedr {
   input {
     github {
       # Api key for querying GitHub events
-      apikeys = ["", "", ""]
+      apikeys = ["0", "1", "2"]
 
       # Name of the collection to use for events
       events_collection = "github_events"
