--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -47,6 +47,14 @@ codefeedr {
       # Api key for querying GitHub events
       apikeys = ["", "", ""]
       input_api_key = ""
+
+      keys = [
+        #{
+        #  key = "example_key"
+        #  limit = 5000 #per hour
+        #}
+      ]
+
       # Name of the collection to use for events
       events_collection = "github_events"
 
