Started on management for API keys in ZooKeeper.

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -51,6 +51,17 @@ codefeedr {
       # Api key for querying GitHub events
       apikeys = ["0", "1", "2"]
 
+      keys = [
+        {
+          key = "example_key"
+          limit = 5000 #per hour
+        },
+        {
+          key = "example_key2"
+          limit = 3000 #per hour
+        }
+      ]
+
       # Name of the collection to use for events
       events_collection = "github_events"
 
