Started implementing it into the GitHubSource.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -53,10 +53,14 @@ codefeedr {
       input_api_key = ""
 
       keys = [
-        #{
-        #  key = "example_key"
-        #  limit = 5000 #per hour
-        #}
+        {
+          key = ""
+          limit = 1500 #per hour
+        },
+        {
+          key = ""
+          limit = 1500 #per hour
+        }
       ]
 
       # Name of the collection to use for events
