--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,5 @@ before_script:
 
 script:
   - sbt package
-  - sbt 'set parallelExecution in ThisBuild := false' testOnly org.codefeedr.core.* org.codefeedr.util.*
+  - sbt 'set parallelExecution in ThisBuild := false' "testOnly org.codefeedr.core.* org.codefeedr.util.*"
   - sbt scalafmt::test
