Fixed a number of issues in kafka source consumer and producer

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -17,7 +17,7 @@ codefeedr {
       bootstrap.servers = "127.0.0.1:9092"
       auto.offset.reset = "earliest"
       auto.commit.interval.ms = 100
-      enable.auto.commit = false
+      enable.auto.commit = true
     }
     # Kafka configuration specific for codefeedrs kafka connectors
     custom {
