Added consumer configuration

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -19,6 +19,9 @@ codefeedr {
       auto.commit.interval.ms = 100
       enable.auto.commit = true
     }
+    producer {
+      bootstrap.servers = "127.0.0.01:9092"
+    }
     # Kafka configuration specific for codefeedrs kafka connectors
     custom {
       # Number of partitions used when creating kafka topics
