Progress on synchronization, bugfix
Added manager implementation for start synchronizing functionality
Fixed broken kafkasource test
Fixed broken kafkaSourceManager (test)
For now removed epochs on a sink (sinks directly modify the subject)
KafkaSource now notifies the manager when it starts on a source epoch
(in catchingUp and Ready state)
Minor refactoring between kafkasource and kafkasourcemanager
KafkaSource can now switch to ready state

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -34,6 +34,10 @@ codefeedr {
       producer.count = 5
     }
   }
+  synchronization {
+    #When all consumers are ready, how muchs epochs in the future should the manager chose to actually run synchronized?
+    synchronizeAfter = 2
+  }
   zookeeper {
     connectionstring = "127.0.0.1:2181"
     connectTimeout = 5
