Replaced 127.0.0.1 with localhost in default configuration Fixed an error in the ZkCollectionStateSpec

--- a/flinkintegration/src/test/resources/reference.conf
+++ b/flinkintegration/src/test/resources/reference.conf
@@ -10,17 +10,17 @@ codefeedr {
 
   kafka {
     server {
-      bootstrap.servers = "127.0.0.01:9092"
+      bootstrap.servers = "localhost:9092"
       retries = 0
     }
     consumer {
-      bootstrap.servers = "127.0.0.1:9092"
+      bootstrap.servers = "localhost:9092"
       auto.offset.reset = "earliest"
       auto.commit.interval.ms = 100
       enable.auto.commit = true
     }
     producer {
-      bootstrap.servers = "127.0.0.01:9092"
+      bootstrap.servers = "localhost:9092"
     }
     # Kafka configuration specific for codefeedrs kafka connectors
     custom {
@@ -39,7 +39,7 @@ codefeedr {
     synchronizeAfter = 2
   }
   zookeeper {
-    connectionstring = "127.0.0.1:2181"
+    connectionstring = "localhost:2181"
     connectTimeout = 5
     sessionTimeout = 30
 
