--- a/experiments/Shared/Elk/logstash/pipeline/logstash.conf
+++ b/experiments/Shared/Elk/logstash/pipeline/logstash.conf
@@ -1,12 +1,30 @@
 input {
-  beats {
-    port => 5044
-	tags => "beats"
+  syslog {
+    codec => "json"
+	port  => 5001
+  }
+  udp {
+    port  => 5000
+    codec => json
+  }
+  tcp {
+    port  => 5000
+    codec => json
   }
 }
 
 
 ## Add your filters / logstash plugins configuration here
+
+filter {
+  mutate {
+    convert => { 
+		"Testnumber" => "integer" 
+		"EntityCount" => "integer"
+	}
+  }
+}
+
 
 output {
 	elasticsearch {
