--- a/experiments/Setup1/CustomKafka_Unaligned/docker-compose.yml
+++ b/experiments/Setup1/CustomKafka_Unaligned/docker-compose.yml
@@ -4,34 +4,19 @@ services:
     configs:
       - source: socketgenerator_conf
         target: "/root/app/application.conf"
+      - source: logback_conf
+        target: "/root/app/logback.xml"
     image: "nvankaam/codefeedr_socketgenerator"
 
-      # Filebeat, monitoring on log files to send to the elastic stack
-    filebeat:
-      image: docker.elastic.co/beats/filebeat:6.3.0
-      container_name: filebeat
-      links:
-        - logstash
-        - kibana
-      command: filebeat -e -strict.perms=false
-      networks:
-        - elk
-      volumes:
-        - type: volume
-          source: codefeedr-log-vol
-          target: /logdir/
-        - type: bind
-          source: ./filebeat/filebeat.yml
-          target: /usr/share/filebeat/filebeat.yml
+  
     
     
 configs:
   socketgenerator_conf:
-    file: ./socketgenerator.conf
+    file: ./socketgenerator/socketgenerator.conf
+  logback_conf:
+    file: ./socketgenerator/logback.xml
 
-    
-volumes:
-  codefeedr-log-vol:
     #If you want to log to an external location, uncomment the external definition below
     #external:
       #name: codefeedr-log-vol
