Formatting code to style guide Reconfiguration of elk stack, so all services are restarted consistently with each other

--- a/experiments/Shared/Elk/docker-compose.yml
+++ b/experiments/Shared/Elk/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - LOGSPOUT=ignore
     networks:
       - elk
+    restart: on-failure
 
   logstash:
     build:
@@ -32,6 +33,7 @@ services:
       - elk
     depends_on:
       - elasticsearch
+    restart: on-failure
 
   kibana:
     build:
@@ -46,6 +48,7 @@ services:
       - elk
     depends_on:
       - elasticsearch
+    restart: on-failure
 
 
   logspout:
