--- a/flinkintegration/src/test/resources/codefeedr.properties
+++ b/flinkintegration/src/test/resources/codefeedr.properties
@@ -2,6 +2,14 @@
 # Codefeedr configuration file
 # Use .properties file for test and debugging purposes
 # Upon deployment, use program arguments instead
-#
+
+
 # Kafka configuration
 kafka.bootstrap.servers=localhost:9092
+
+#Zookeeper configuration
+zookeeper.connectionString=192.168.99.100:9092
+zookeeper.connectionTimeout=5
+zookeeper.sessionTimeout=30
+
+#Codefeedr specific configuration
