Working integration with properties file Added more debug information on configuration

--- a/flinkintegration/src/test/resources/codefeedr.properties
+++ b/flinkintegration/src/test/resources/codefeedr.properties
@@ -8,7 +8,7 @@
 kafka.bootstrap.servers=localhost:9092
 
 #Zookeeper configuration
-zookeeper.connectionString=192.168.99.100:9092
+zookeeper.connectionString=localdocker:2181
 zookeeper.connectionTimeout=5
 zookeeper.sessionTimeout=30
 
