Split kafka configuration into admin, producer and consumer (again)

--- a/flinkintegration/src/test/resources/codefeedr.properties
+++ b/flinkintegration/src/test/resources/codefeedr.properties
@@ -4,8 +4,13 @@
 # Upon deployment, use program arguments instead
 
 
-# Kafka configuration
-kafka.bootstrap.servers=localhost:9092
+# Kafka configuration, passed to kafka
+# The "kafka." is removed as prefix before sending to kafka
+kafka.bootstrap.servers=localdocker:9092
+kafka.retries=0
+kafka.auto.offset.reset=earliest
+kafka.auto.commit.interval.ms=100
+kafka.auto.commit.enable=true
 
 #Zookeeper configuration
 zookeeper.connectionString=localdocker:2181
