--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ services:
   - docker
   - mongodb
 
+addons:
+  hosts:
+    - localdocker
 
 before_cache:
   # Cleanup the cached directories to avoid unnecessary cache updates
@@ -20,7 +23,7 @@ cache:
 
 
 before_install:
-  - docker-compose -f "containers/kafka/docker-compose.yml" up -d
+  - docker-compose -f "experiments/Shared/kafka-docker/docker-compose-travis.yml" up -d
   - docker ps -a
 matrix:
   include:
