--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_script:
 
 script:
   - sbt package
-  - sbt 'set parallelExecution in ThisBuild := false' test
+  - sbt 'set parallelExecution in ThisBuild := false' "project flinkintegration" test
   - sbt scalafmt::test
 
 #deploy:
