Refactored the socketreceiver implementation to make use of proper Dependency injection

--- a/experiments/Shared/Elk/logstash/pipeline/logstash.conf
+++ b/experiments/Shared/Elk/logstash/pipeline/logstash.conf
@@ -21,6 +21,7 @@ filter {
     convert => { 
 		"Testnumber" => "integer" 
 		"EntityCount" => "integer"
+		"RUN_INCREMENT" => "integer"
 	}
   }
 }
