WIP on visualizing experiments Added jodatime for dateTime

--- a/experiments/Shared/Elk/logstash/pipeline/logstash.conf
+++ b/experiments/Shared/Elk/logstash/pipeline/logstash.conf
@@ -24,7 +24,12 @@ filter {
 		"RUN_INCREMENT" => "integer"
 	}
   }
+  date {
+	match => ["eventTime", "ISO8601"]
+	target => "eventTime"
+	}
 }
+
 
 
 output {
