Added todo list Added unit test for the GeneratorSource GeneratorSource is now a component Seeds for generators are now longs instead of integers Fixed deprecation warnings on kafka connector

--- a/flinkintegration/src/test/resources/codefeedr.properties
+++ b/flinkintegration/src/test/resources/codefeedr.properties
@@ -17,3 +17,5 @@ zookeeper.connectionString=localdocker:2181
 zookeeper.connectionTimeout=5
 zookeeper.sessionTimeout=30
 
+generator.batch.size=10
+
