--- a/flinkintegration/src/main/resources/codefeedr.properties
+++ b/flinkintegration/src/main/resources/codefeedr.properties
@@ -17,3 +17,4 @@ zookeeper.connectionString=localdocker:2181
 zookeeper.connectionTimeout=5
 zookeeper.sessionTimeout=30
 
+generator.batch.size=100
