Added some structured logging for measurements through ELK Configured loglevels in the non-test environment Switched to filesystem state backend because of out of memory

--- a/flinkintegration/src/main/resources/codefeedr.properties
+++ b/flinkintegration/src/main/resources/codefeedr.properties
@@ -18,3 +18,5 @@ zookeeper.connectionTimeout=5
 zookeeper.sessionTimeout=30
 
 generator.batch.size=100
+
+statebackend.path=file:///temp/flinkstate
