--- a/experiments/Shared/Flink/docker-compose.yml
+++ b/experiments/Shared/Flink/docker-compose.yml
@@ -43,4 +43,16 @@ services:
       - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=2
 
 
+  logspout:
+    #Using the prebuilt image because it takes very long to build
+    image: nvankaam/logspout
+    volumes:
+      - '/var/run/docker.sock:/tmp/docker.sock'
+    environment:
+      ROUTE_URIS: logstash://logstash:5000
+      LOGSTASH_TAGS: docker-elk
+
+    restart: on-failure
+
+
 networks: {flink: {}}
