--- a/experiments/Shared/Elk/docker-compose.yml
+++ b/experiments/Shared/Elk/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
     ports:
-      - "5000:5000"
-      - "5001:5001"
+      - "athens.ewi.tudelft.nl:5000:5000"
+      - "athens.ewi.tudelft.nl:5001:5001"
     environment:
       - LS_JAVA_OPTS=-Xmx256m -Xms256m
       - LOGSPOUT=ignore
