--- a/experiments/Shared/Elk/docker-compose.yml
+++ b/experiments/Shared/Elk/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
     ports:
-      - "172.16.45.114:5000:5000"
+      - "172.16.45.114:5000:5000/udp"
       - "172.16.45.114:5001:5001"
     environment:
       - LS_JAVA_OPTS=-Xmx256m -Xms256m
