--- a/flinkintegration/src/test/resources/codefeedr.properties
+++ b/flinkintegration/src/test/resources/codefeedr.properties
@@ -6,14 +6,14 @@
 
 # Kafka configuration, passed to kafka
 # The "kafka." is removed as prefix before sending to kafka
-kafka.bootstrap.servers=localhost:9092
+kafka.bootstrap.servers=localdocker:9092
 kafka.retries=1
 kafka.auto.offset.reset=earliest
 kafka.auto.commit.interval.ms=100
 kafka.auto.commit.enable=true
 
 #Zookeeper configuration
-zookeeper.connectionString=localhost:2181
+zookeeper.connectionString=localdocker:2181
 zookeeper.connectionTimeout=5
 zookeeper.sessionTimeout=30
 
