Updated Flink to 1.5.4 Added custom build action for flink container, with log4j replaced with logback Modified some configuration for structured logging

--- a/experiments/Shared/Elk/logstash/pipeline/logstash.conf
+++ b/experiments/Shared/Elk/logstash/pipeline/logstash.conf
@@ -19,9 +19,8 @@ input {
 filter {
   mutate {
     convert => { 
-		"Testnumber" => "integer" 
-		"EntityCount" => "integer"
-		"RUN_INCREMENT" => "integer"
+		"elements" => "integer"
+		"latency" => "integer"
 	}
   }
   date {
