Switched back to image from build for now

--- a/experiments/Shared/Flink/docker-compose.yml
+++ b/experiments/Shared/Flink/docker-compose.yml
@@ -6,8 +6,9 @@ services:
 # Flink jobmanager
   jobmanager:
     restart: on-failure
-    build:
-      context: flink/
+    image: flink:1.5.4-alpine
+    #build:
+    #  context: flink/
     volumes:
       - "./config/logback.xml:/opt/flink/conf/logback-console.xml"
     expose:
@@ -22,8 +23,9 @@ services:
 #Flink taskmanager
   taskmanager:
     restart: on-failure
-    build:
-      context: flink/
+    image: flink:1.5.4-alpine
+    #build:  
+    #  context: flink/
     volumes:
       - "./config/logback.xml:/opt/flink/conf/logback-console.xml"
     expose:
