Added checkpointedlatency measurement to logstash

--- a/experiments/Shared/Elk/logstash/pipeline/logstash.conf
+++ b/experiments/Shared/Elk/logstash/pipeline/logstash.conf
@@ -21,6 +21,7 @@ filter {
     convert => { 
 		"elements" => "integer"
 		"latency" => "integer"
+		"checkpointedLatency" => "integer"
 		"checkpoint" => "integer"
 	}
   }
