Fixed typo in logstash config

--- a/experiments/Shared/Elk/logstash/pipeline/logstash.conf
+++ b/experiments/Shared/Elk/logstash/pipeline/logstash.conf
@@ -21,7 +21,7 @@ filter {
     convert => { 
 		"elements" => "integer"
 		"latency" => "integer"
-		"checkpointedLatency" => "integer"
+		"checkpointLatency" => "integer"
 		"checkpoint" => "integer"
 	}
   }
