--- a/experiments/Shared/Flink/flink/dockerfile
+++ b/experiments/Shared/Flink/flink/dockerfile
@@ -4,6 +4,8 @@ RUN rm -f /opt/flink/lib/log4j-1.2.17.jar
 RUN rm -f /opt/flink/lib/slf4j-log4j12-1.7.7.jar
 COPY lib /opt/flink/lib/
 
+mkdir -p /temp/flinkstate
+RUN chmod 0777 /temp/flinkstate
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 EXPOSE 6123 8081
