--- a/flinkintegration/src/main/resources/reference.conf
+++ b/flinkintegration/src/main/resources/reference.conf
@@ -22,6 +22,17 @@ codefeedr {
       bootstrap.servers = "172.20.1.2:9092"
       retries = 1
     }
+    # Kafka configuration specific for codefeedrs kafka connectors
+    custom {
+      # Number of partitions used when creating kafka topics
+      # Each source in Flink can expose data from one or more partitions,
+      # so keep flink's parallism divisable by this number
+      partition.count = 4
+      # The amount of producers each instance of each kafka sink should maintain
+      # For each uncommitted checkpoint each instance of each kafka sink maintains a producer
+      # 5 is the same used in flinks native kafka source implementation
+      producer.count = 5
+    }
   }
   zookeeper {
     connectionstring = "172.20.1.3:2181"
