Some configuration tweaks

--- a/flinkintegration/src/main/resources/codefeedr.properties
+++ b/flinkintegration/src/main/resources/codefeedr.properties
@@ -16,7 +16,7 @@ kafka.auto.commit.enable=true
 zookeeper.connectionString=athens.ewi.tudelft.nl:2181
 zookeeper.connectionTimeout=5
 zookeeper.sessionTimeout=30
-
+partitions=16
 generator.batch.size=100
 
 statebackend.path=file:///temp/flinkstate
