--- a/flinkintegration/src/main/resources/reference.conf
+++ b/flinkintegration/src/main/resources/reference.conf
@@ -10,16 +10,16 @@ codefeedr {
 
   kafka {
     server {
-      bootstrap.servers = "athens.ewi.tudelft.nl:9092"
+      bootstrap.servers = "172.16.45.114:9092"
       retries = 0
     }
     consumer {
-      bootstrap.servers = "athens.ewi.tudelft.nl:9092"
+      bootstrap.servers = "172.16.45.114:9092"
       auto.offset.reset = "earliest"
       auto.commit.interval.ms = 100
     }
     producer {
-      bootstrap.servers = "athens.ewi.tudelft.nl:9092"
+      bootstrap.servers = "172.16.45.114:9092"
       retries = 1
     }
     # Kafka configuration specific for codefeedrs kafka connectors
@@ -35,7 +35,7 @@ codefeedr {
     }
   }
   zookeeper {
-    connectionstring = "athens.ewi.tudelft.nl:2181"
+    connectionstring = "172.16.45.114:2181"
     connectTimeout = 5
     sessionTimeout = 30
   }
