Fixed issues introduced by running sources actually in parallel. Introduced locks in the kafkasourceconsumer to prevent concurrent access on the kafka consumer Now relying on custom commits to kafka istead of the auto commit interval

--- a/flinkintegration/src/main/resources/reference.conf
+++ b/flinkintegration/src/main/resources/reference.conf
@@ -16,7 +16,8 @@ codefeedr {
     consumer {
       bootstrap.servers = "athens.ewi.tudelft.nl:9092"
       auto.offset.reset = "earliest"
-      auto.commit.interval.ms = 100
+      # auto.commit.interval.ms = 100
+      enable.auto.commit = false
     }
     producer {
       bootstrap.servers = "athens.ewi.tudelft.nl:9092"
