--- a/flinkintegration/src/test/resources/reference.conf
+++ b/flinkintegration/src/test/resources/reference.conf
@@ -16,8 +16,8 @@ codefeedr {
     consumer {
       bootstrap.servers = "localhost:9093"
       auto.offset.reset = "earliest"
-      auto.commit.interval.ms = 100
-      enable.auto.commit = true
+      # auto.commit.interval.ms = 100
+      enable.auto.commit = false
     }
     producer {
       bootstrap.servers = "localhost:9093"
