Modified deployment scripts so kafka and zookeeper are removed including their volumes

--- a/flinkintegration/src/test/resources/codefeedr.properties
+++ b/flinkintegration/src/test/resources/codefeedr.properties
@@ -7,10 +7,9 @@
 # Kafka configuration, passed to kafka
 # The "kafka." is removed as prefix before sending to kafka
 kafka.bootstrap.servers=localhost:9092
-kafka.retries=1
+kafka.retries=2
 kafka.auto.offset.reset=earliest
-kafka.auto.commit.interval.ms=100
-kafka.auto.commit.enable=true
+kafka.auto.commit.enable=false
 
 #Zookeeper configuration
 zookeeper.connectionString=localhost:2181
@@ -23,3 +22,5 @@ test.value=default
 test.defaultvalue=default
 
 codefeedr.awaitDuration=30
+
+partitions=4
