Attempts to fix logging output when running jobs on one of the flink containers Deployment configuration for experiments

--- a/flinkintegration/src/test/resources/codefeedr.properties
+++ b/flinkintegration/src/test/resources/codefeedr.properties
@@ -16,6 +16,9 @@ zookeeper.connectionString=localhost:2181
 zookeeper.connectionTimeout=5
 zookeeper.sessionTimeout=30
 
+#Connectionstring to be used to connect to the remote zookeeper instance
+zookeeper.remote.connectionString=localhost:2183
+
 generator.batch.size=10
 
 test.value=default
@@ -24,3 +27,4 @@ test.defaultvalue=default
 codefeedr.awaitDuration=30
 
 partitions=2
+
