More tweaks on deployment

--- a/experiments/Shared/Flink/docker-compose.yml
+++ b/experiments/Shared/Flink/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     build:
       context: flink/
     volumes:
-      - "./config/logback.xml:/opt/flink/conf/logback-console.xml"
+      - "./config/logback.xml:/opt/flink/conf/logback.xml"
     expose:
       - "6123"
     networks: ['flink']
@@ -27,7 +27,7 @@ services:
     build:  
       context: flink/
     volumes:
-      - "./config/logback.xml:/opt/flink/conf/logback-console.xml"
+      - "./config/logback.xml:/opt/flink/conf/logback.xml"
     expose:
       - "6121"
       - "6122"
