--- a/experiments/Shared/Flink/docker-compose.yml
+++ b/experiments/Shared/Flink/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     environment:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
       - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=2
+    scale: 6
 
 
   logspout:
