configuration changes, and fixes for issues in experiments

--- a/flinkintegration/src/main/resources/reference.conf
+++ b/flinkintegration/src/main/resources/reference.conf
@@ -10,17 +10,17 @@ codefeedr {
 
   kafka {
     server {
-      bootstrap.servers = "athens.ewi.tudelft.nl:9092"
+      bootstrap.servers = "gangster.processfive.com:9092"
       retries = 0
     }
     consumer {
-      bootstrap.servers = "athens.ewi.tudelft.nl:9092"
+      bootstrap.servers = "gangster.processfive.com:9092"
       auto.offset.reset = "earliest"
       # auto.commit.interval.ms = 100
       enable.auto.commit = false
     }
     producer {
-      bootstrap.servers = "athens.ewi.tudelft.nl:9092"
+      bootstrap.servers = "gangster.processfive.com:9092"
       retries = 1
     }
     # Kafka configuration specific for codefeedrs kafka connectors
@@ -28,7 +28,7 @@ codefeedr {
       # Number of partitions used when creating kafka topics
       # Each source in Flink can expose data from one or more partitions,
       # so keep flink's parallism divisable by this number
-      partition.count = 2
+      partition.count = 4
       # The amount of producers each instance of each kafka sink should maintain
       # For each uncommitted checkpoint each instance of each kafka sink maintains a producer
       # 5 is the same used in flinks native kafka source implementation
@@ -36,7 +36,7 @@ codefeedr {
     }
   }
   zookeeper {
-    connectionstring = "athens.ewi.tudelft.nl"
+    connectionstring = "gangster.processfive.com"
     connectTimeout = 5
     sessionTimeout = 30
   }
