--- a/experiments/Shared/kafka-docker/docker-compose.yml
+++ b/experiments/Shared/kafka-docker/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     image: wurstmeister/zookeeper
     restart: on-failure
     ports:
-      - "athens.ewi.tudelft.nl:2181:2181"
+      - "gangster.processfive.com:2181:2181"
   local_kafka:
     build: .
     restart: on-failure
     ports:
-      - "athens.ewi.tudelft.nl:9092:9092"
+      - "gangster.processfive.com:9092:9092"
     environment:
       KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ZOOKEEPER_CONNECT: local_zookeeper:2181
